# stockflow

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  seed.sh  seed.sql  stockflow.postman_collection.json
migrations/: 20260609163531_inventory.sql
src/: lib.rs  main.rs  middleware.rs  routes.rs  types.rs
