[package]
name = "inventory-management-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
tracing = "0.1.44"
uuid = { version = "1.23.2", features = ["serde"] }
