[package]
name = "inventory-management-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["aws-lc-rs", "aws_lc_rs"] }
rand_core = "0.6"
# rand_os = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
tracing = "0.1.44"
uuid = { version = "1.23.2", features = ["serde"] }
