[package]
name = "stockflow"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8.9"}
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["aws-lc-rs", "aws_lc_rs"] }
rand_core = "0.6"
# rand_os = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }

sqlx = { version = "0.9.0", features = ["chrono", "json", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.3", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
